--- a/page.html
+++ b/page.html
@@ -11,9 +11,15 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4 bg-light d-flex align-items-center justify-content-center" id="leftSide">
-                <!-- Content for the left side -->
-                <div style="width: 200px; height: 1000px;">
-                    <h2>Left Side Content</h2>
+                <div class="tools">
+                    <div class="tool" id="pickaxe">pickaxe</div>
+                    <div class="tool" id="axe">axe</div>
+                    <div class="tool" id="shovel">shovel</div>
+                </div>
+                <div class="inventory">
+                    <div>1</div>
+                    <div>1</div>
+                    <div>1</div>
                 </div>
             </div>
             <div class="custom-grid" id="rightSide">
